frontend/core/src/main/webapp/landing/css/main.css
/************************/
/* FOUNDATION OVERRIDES */
/************************/

body, button, .button, .top-bar-section ul li > a {
  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeue',
'Helvetica Neue',  'Segoe UI Light', 'Segoe UI', 'sans-serif-light', 'sans-serif';
  font-weight: 100;
}

body {
  height: 100%;
  overflow: hidden;
}

html {
  /* Disable overflow-y in mobile to get momentum scrolling to work */
  overflow-y: hidden;
}

body {
  font-size: 15px;
  color: #000000;
}

/* LARGE */
@media only screen and (min-width: 64.063em){
  html {
    /* Set overflow-y to initial to get animated scroll to work in desktop */
    overflow-y: initial;
  }
  body {
    font-size: 16px;
  }
}

/* EXTRA LARGE */
@media only screen and (min-width: 90.063em){
  body {
    font-size: 20px;
  }
}

.row {
  max-width: none;
}

button, .button {
  background-color: #0f82fe;
}


button:hover, button:focus, .button:hover, .button:focus {
  background-color: #0171ea;
}

/************************/
/* FONTS                */
/************************/

@font-face {
  font-family: 'icomoon';
  src:url('../fonts/icomoon.eot?m5bl0u');
  src:url('../fonts/icomoon.eot?#iefixm5bl0u') format('embedded-opentype'),
    url('../fonts/icomoon.woff?m5bl0u') format('woff'),
    url('../fonts/icomoon.ttf?m5bl0u') format('truetype'),
    url('../fonts/icomoon.svg?m5bl0u#icomoon') format('svg');
  font-weight: normal;
  font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
  font-family: 'icomoon';
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icon-menu:before {
  content: "\e605";
}

.icon-logo:before {
  content: "\e60a";
}

.icon-logo-text:before {
  content: "\e60b";
}

.icon-logo-text:after {
  content: "beta";
}

.icon-volume-mute:before {
  content: "\e600";
}

.icon-volume-up:before {
  content: "\e601";
}

.icon-play:before {
  content: "\e615";
}

.icon-facebook:before {
  content: "\e619";
}

.icon-twitter:before {
  content: "\e61a";
}

.icon-email:before {
  content: "\e61b";
}

/******************/
/* NAVIGATION BAR */
/******************/

.top-bar{
  position: absolute;
  width: 100%;
  min-height: 50px;
  z-index: 2;
  background-color: transparent;
}

.top-bar.expanded .title-area{
  background-color: #212121;
}

.top-bar.expanded .top-bar-section ul li{
  background-color: #212121;
}

.top-bar .title-area{
  min-height: 50px;
  padding-left: 0;
}

.top-bar .toggle-topbar.menu-icon > a {
  padding-right: 28px;
}

.top-bar .toggle-topbar.menu-icon > a > span:after {
  box-shadow: none;
}

.top-bar a {
  color: #000000 !important;
  text-decoration: none;
}

.top-bar.expanded a {
  color: #FFFFFF !important;
  padding-left: 28px;
  padding-top: 0;
  padding-bottom: 0;
}

.top-bar.expanded .top-bar-section ul li.active>a {
  background-color: #FFFFFF;
  color: #000000 !important;
}

.top-bar .logo {
  line-height: 52px;
  padding-top: 2px;
  padding-left: 28px;
}

.top-bar .logo span:before {
  font-size: 19px;
}

/* MEDIUM */
@media only screen and (min-width: 40.063em){
  .top-bar{
    padding-top: 50px;
    min-height: 150px;
  }
  .top-bar .title-area {
    min-height: 150px;
  }
  .top-bar .logo a {
    color: #000000;
  }
  .top-bar .logo {
    padding-left: 5vw;
  }

  .top-bar .top-bar-section {
    padding-right: 5vw;
  }

  .top-bar > .top-bar-section li, .top-bar > .top-bar-section li a {
    background-color: transparent !important;
  }

  .top-bar > .top-bar-section li a {
    font-size: 18px;
  }

  .top-bar-section li.active, .top-bar-section li:hover, .top-bar-section li:focus{
    border-bottom: 6px solid #000000;
  }

  .top-bar > .top-bar-section li {
    margin-left: 10px;
    margin-right: 10px;
  }

  .top-bar > .top-bar-section li:last-child {
    margin-right: 0;
  }

  .top-bar li#manifesto-link {
    margin-left: 20px;
  }
}

/* LARGE */
@media only screen and (min-width: 64.063em){
  .top-bar .logo span:before {
    font-size: 30px;
  }
  .top-bar > .top-bar-section li a {
    font-size: 20px;
  }
}

/* EXTRA LARGE */
@media only screen and (min-width: 90.063em){
  .top-bar .logo span:before {
    font-size: 40px;
  }
  .top-bar > .top-bar-section li a {
    font-size: 24px;
  }
}

/******************/
/* MAIN           */
/******************/

div.main {
  height: 100%;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  display: table;
  max-width: 568px;
}

/* Always disable scrollbars*/
::-webkit-scrollbar {
  display: none;
}

.text-jumbotron {
  font-family: 'HelveticaNeue','Helvetica Neue','Segoe UI Bold','Segoe UI','sans-serif';
  font-size: 56px;
  font-weight: 700;
}

.highlighted {
  color: #0f82fe;
}

/* MEDIUM */
@media only screen and (min-width: 40.063em){
  .text-jumbotron {
    font-size: 61px;
  }
}

/******************/
/* DOWNLOAD PAGE  */
/******************/

#download {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
  font-size: 14px;
  padding-left: 28px;
  padding-right: 28px;
}

#download .jumbotron{
  text-align: left;
  top: 10%;
  line-height: 50px;
}

#download .download-buttons {
  padding-top: 10vh;
}

#download .download-buttons .pull-left {
  float: left;
}

#download .download-buttons .pull-right {
  float: right;
}


/*******************/
/* MANIFESTO PAGE  */
/*******************/

#manifesto {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
  padding-left: 28px;
  padding-right: 28px;
}
#manifesto-container{
  display: inline-block;
  overflow-y: auto;
  margin-top: 30px;
  max-height: 86vh;
  -webkit-overflow-scrolling: touch;
}

#manifesto .text-normal{
  font-size: 18px;
}

#manifesto .text-large{
  font-family: 'HelveticaNeue','Helvetica Neue','Segoe UI Bold','Segoe UI','sans-serif';
  font-size: 30px;
  font-weight: 700;
}

#manifesto p {
  margin-top: 20px;
  margin-bottom: 20px;
}

#manifesto-heading-bottom, #manifesto-heading-top {
  line-height: 30px;
  padding-bottom: 10px;
}

#manifesto-heading-bottom {
  padding-top: 10px;
}

/* LARGE */
@media only screen and (min-width: 64.063em){
  #manifesto-container{
    margin-top: 0;
    max-height: 82vh;
  }

  #manifesto .text-normal{
    font-size: 19px;
  }
  #manifesto .text-large{
    font-size: 35px;
  }
}

/* EXTRA LARGE */
@media only screen and (min-width: 90.063em){
  #manifesto .text-normal{
    font-size: 23px;
  }
  #manifesto .text-large{
    font-size: 42px;
  }
}

/* WIDE BUT SHORT */
@media only screen and (min-width: 64.063em) and (max-height: 700px){
  #manifesto-container{
    margin-top: 6.5vh;
    max-height: 72vh;
  }
}
@media only screen and (min-width: 64.063em) and (max-height: 600px){
  #manifesto-container{
    margin-top: 8vh;
    max-height: 65vh;
  }
}
@media only screen and (min-width: 64.063em) and (max-height: 500px){
  #manifesto-container{
    max-height: 50vh;
  }
}

/* TARGET IPHONES THAT DON'T SUPPORT vh */
/* iPhone 6 */
@media screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2){
  #manifesto-container{
    margin-top: 50px;
  }
}

/* iPhone 6 Plus */
@media screen and (device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3){
  #manifesto-container{
    margin-top: 50px;
  }
}

/* iPhone 5 */
@media screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2){
  #manifesto-container{
    margin-top: 35px;
  }
}

/* iPhone 4 */
@media screen and (device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2){
  #manifesto-container{
    margin-top: 50px;
    padding-bottom: 50px;
  }
}

/******************/
/* FOOTER         */
/******************/

footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  height: 44px;
}

footer div {
  display: block;
  text-align: center;
}

footer div.centered .button {
  width: 100%;
  max-width: 568px;
  font-family: 'HelveticaNeue', 'Helvetica Neue', 'Segoe UI Bold', 'Segoe UI', 'sans-serif';
  font-weight: 700;
  font-size: 25px;
  height: 44px;
  line-height: 44px;
  padding: 0;
}

footer div.right {
  display: none; /* Don't show on mobile */
  position: absolute;
  right: 5%;
  top: 0%;
  cursor: pointer;
}

footer div.right .icon-volume-mute:before, footer div.right .icon-volume-up:before {
  height: 44px;
  line-height: 44px;
  color: #000000;
  font-size: 30px;
}

footer div.left {
  display: none; /* Don't show on mobile */
  position: absolute;
  left: 5%;
  top: 0%;
  cursor: pointer;
}

footer a.some {
  color: #000000;
  text-decoration: none;
  vertical-align: middle;
  padding: 0 5px 0 5px;
  text-align: center;
}

footer .some span:before{
  height: 44px;
  line-height: 44px;
  font-size: 35px;
}

/* BEGIN BUTTON DOESN'T FILL WHOLE WIDTH */
@media only screen and (min-width: 569px){
  footer {
    bottom: 5%;
  }
}

/* LARGE */
@media only screen and (min-width: 64.063em){
  footer div.left, footer div.right {
    display: inherit;
  }
}

